// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for the projects service deleteExperimentEntries calls doc client 1`] = `
Array [
  Array [
    Object {
      "RequestItems": Object {
        "user-access-test": Array [
          Object {
            "DeleteRequest": Object {
              "Key": Object {
                "experimentId": "experimentid11111111111111111111",
                "userId": "032cdb44-0cd3-4d58-af21-850kp0b95ac7",
              },
            },
          },
        ],
      },
    },
  ],
]
`;

exports[`tests for the projects service deleteExperimentEntries calls doc client 2`] = `
Array [
  Array [
    Object {
      "RequestItems": Object {
        "invite-access-test": Array [
          Object {
            "DeleteRequest": Object {
              "Key": Object {
                "experimentId": "experimentid11111111111111111111",
                "userEmail": undefined,
              },
            },
          },
        ],
      },
    },
  ],
]
`;

exports[`tests for the projects service getExperimentEntries calls doc client 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":hkey": "experimentid11111111111111111111",
      },
      "KeyConditionExpression": "experimentId = :hkey",
      "TableName": "table",
    },
  ],
]
`;
